--- a/GiuaKy/app/src/main/res/layout/activity_quan_ly_nhan_vien.xml
+++ b/GiuaKy/app/src/main/res/layout/activity_quan_ly_nhan_vien.xml
@@ -8,18 +8,22 @@
     android:orientation="vertical"
     tools:context=".QuanLyNhanVien">
 
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageButton
+        android:id="@+id/btnThemNhanVien"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_gravity="right"
-        android:text="Thêm mới" />
+        android:layout_marginEnd="4dp"
+        android:src="@drawable/add"
+        android:background="@android:color/transparent"
+        android:scaleType="fitCenter"
+        tools:ignore="RtlHardcoded" />
 
     <SearchView
+        android:id="@+id/svNhanVien"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#00ECA100"
-        android:defaultFocusHighlightEnabled="true"
         android:iconifiedByDefault="false"
         android:outlineSpotShadowColor="#358F00"
         android:queryHint="Tìm kiếm nhân viên" />
