--- a/GiuaKy/app/src/main/res/layout/activity_them_don_vi.xml
+++ b/GiuaKy/app/src/main/res/layout/activity_them_don_vi.xml
@@ -3,13 +3,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/ThemNhanVien"
+    android:id="@+id/themdonvi"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
     android:isScrollContainer="true"
     android:orientation="vertical"
-    tools:context=".SuaNhanVien">
+    tools:context=".ThemDonVi">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -22,7 +22,7 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/imgSuaAnhDaiDien"
+                android:id="@+id/imgLogo"
                 android:layout_width="130dp"
                 android:layout_height="130dp"
                 android:layout_gravity="center"
@@ -32,65 +32,37 @@
                 tools:srcCompat="@tools:sample/avatars" />
 
             <Button
-                android:id="@+id/btnSuaAnhDaiDien"
+                android:id="@+id/btnThemLogo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="15dp"
                 android:backgroundTint="#6E6E6E"
                 android:gravity="center"
-                android:text="Chọn ảnh" />
+                android:text="Chọn Logo" />
 
             <TextView
-                android:id="@+id/textViewHoten"
+                android:id="@+id/textViewTenDonVi"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="20dp"
                 android:paddingStart="10dp"
-                android:text="Họ và tên"
+                android:text="Tên đơn vị"
                 android:textColor="#000000"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/edtSuaHoTen"
+                android:id="@+id/edtThemTenDonVi"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="20dp"
                 android:background="@drawable/custom_input"
-                android:hint="Họ và tên"
-                android:inputType="text"
-                android:paddingStart="20dp"
-                android:textColor="#000000"
-                android:textColorHint="#94979F"
-                android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/textViewChuVu"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="20dp"
-                android:paddingStart="10dp"
-                android:text="Chức vụ"
-                android:textColor="#000000"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
-            <EditText
-                android:id="@+id/edtSuaChucVu"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="20dp"
-                android:background="@drawable/custom_input"
-                android:hint="Chức vụ"
+                android:hint="Tên đơn vị"
                 android:inputType="text"
                 android:paddingStart="20dp"
                 android:textColor="#000000"
@@ -111,7 +83,7 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/edtSuaEmailNV"
+                android:id="@+id/edtDetailEmailNV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
@@ -120,6 +92,62 @@
                 android:background="@drawable/custom_input"
                 android:hint="Email"
                 android:inputType="text"
+                android:paddingStart="20dp"
+                android:textColor="#000000"
+                android:textColorHint="#94979F"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/textViewWebsite"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="20dp"
+                android:paddingStart="10dp"
+                android:text="Website"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/edtThemWebsite"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="20dp"
+                android:background="@drawable/custom_input"
+                android:hint="Website"
+                android:inputType="text"
+                android:paddingStart="20dp"
+                android:textColor="#000000"
+                android:textColorHint="#94979F"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/textViewDiaChi"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="20dp"
+                android:paddingStart="10dp"
+                android:text="Địa chỉ"
+                android:textColor="#000000"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/edtThemDiaChi"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="20dp"
+                android:background="@drawable/custom_input"
+                android:hint="Địa chỉ"
+                android:inputType="textMultiLine"
                 android:paddingStart="20dp"
                 android:textColor="#000000"
                 android:textColorHint="#94979F"
@@ -139,7 +167,7 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/edtSuaSDTNV"
+                android:id="@+id/edtDetailSDTNV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
@@ -147,27 +175,27 @@
                 android:layout_marginEnd="20dp"
                 android:background="@drawable/custom_input"
                 android:hint="Số điện thoại"
-                android:inputType="textMultiLine"
+                android:inputType="number"
                 android:paddingStart="20dp"
                 android:textColor="#000000"
                 android:textColorHint="#94979F"
                 android:textSize="18sp" />
 
             <TextView
-                android:id="@+id/textViewMaDonVi"
+                android:id="@+id/textViewDonViCha"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="20dp"
                 android:paddingStart="10dp"
-                android:text="Mã đơn vị"
+                android:text="Đơn vị cha"
                 android:textColor="#000000"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
             <Spinner
-                android:id="@+id/spnSuaDonVi"
+                android:id="@+id/spnDonViCha"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
@@ -177,18 +205,18 @@
                 android:paddingStart="20dp"
                 android:textColor="#000000"
                 android:textColorHint="#94979F"
-                android:autofillHints="Chọn mã đơn vị"
+                android:autofillHints="Chọn đơn vị cha"
                 android:textSize="20sp" />
 
             <Button
-                android:id="@+id/btnSuaNhanVien"
+                android:id="@+id/btnAddDonVi"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="30dp"
                 android:layout_marginEnd="30dp"
                 android:background="@drawable/radius"
-                android:text="Lưu lại"
+                android:text="Thêm"
                 android:textColor="#FFFFFF"
                 android:textSize="18sp"
                 android:textStyle="bold"
