--- a/GiuaKy/app/src/main/res/layout/activity_main.xml
+++ b/GiuaKy/app/src/main/res/layout/activity_main.xml
@@ -2,12 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/mainInViewProduct"
+    android:id="@+id/themdonvi"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".HomePageActivity">
+    tools:context=".MainActivity">
 
     <TabHost
         android:id="@+id/tabHost"
@@ -33,13 +33,22 @@
                 android:layout_height="match_parent">
 
                 <LinearLayout
+                    android:id="@+id/tab_nhanvien"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <include layout="@layout/activity_quan_ly_nhan_vien" />
+                </LinearLayout>
+
+                <LinearLayout
                     android:id="@+id/tab_donvi"
                     android:layout_width="match_parent"
                     android:layout_height="678dp"
                     android:orientation="vertical"
                     android:pointerIcon="alias">
 
-                    <include layout="@layout/activity_quan_ly_don_vi2" />
+                    <include layout="@layout/activity_quan_ly_don_vi" />
 
                     <TabWidget
                         android:id="@android:id/tabs"
@@ -48,15 +57,6 @@
                         android:focusableInTouchMode="true"
                         android:padding="10dp"
                         android:pointerIcon="zoom_in" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:id="@+id/tab_nhanvien"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical">
-
-                    <include layout="@layout/activity_quan_ly_nhan_vien" />
                 </LinearLayout>
 
             </FrameLayout>
